<resources>
    <string name="app_name">MessageApp</string>
    <string name="read_message">Read Message</string>
    <string name="mention_any_additional_features_like_read_receipts_typing_indicators_or_message">Mention any additional features like read receipts, typing indicators, or message.</string>
    <string name="next">Next</string>
    <string name="free_voice_calls">Free Voice Calls</string>
    <string name="groups">Groups</string>
    <string name="explain_the_capability_to_send_voice_messages_without_any_charges">Explain the capability to send voice messages without any charges.</string>
    <string name="highlight_the_ability_to_create_and_join_groups_for_different_purposes">Highlight the ability to create and join groups for different purposes.</string>
    <string name="let_s_start">Let’s Start</string>
    <string name="english">English</string>
    <string name="messages">Messages</string>
    <string name="effortless_messaging_endless_connections">Effortless messaging, endless connections</string>
    <string name="archive">Archive</string>
    <string name="block_list">Block List</string>
    <string name="language">Language</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="search_conversation">Search Conversation</string>
    <string name="type_a_name_or_number">Type a name or number</string>
    <string name="people">People</string>
    <string name="no_data_found">No data found</string>
    <string name="selectd">selected</string>
    <string name="allow_permission">Allow Permission!</string>
    <string name="set_default_sms_app">Set Default sms app</string>
    <string name="give_us_permission_in_one_step_to_make_the_messages_app_work_smoothly">Give us permission in one step to make the Messages app work smoothly.</string>
    <string name="archive_message">Archive Message?</string>
    <string name="you_are_sure_you_want_to_archive_1_conversation">You are sure you want to Archive 1 conversation</string>
    <string name="you_are_sure_you_want_to_un_archive_1_conversation">You are sure you want to Un Archive  conversation</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="delete_message">Delete Message?</string>
    <string name="you_are_sure_you_want_to_delete_conversation">You are sure you want to Delete conversation</string>
    <string name="delete">Delete</string>
    <string name="you_are_sure_you_want_to_block_conversation">You are sure you want to block conversation</string>
    <string name="you_are_sure_you_want_to_un_block_conversation">You are sure you want to un block conversation</string>
    <string name="block">Block</string>
    <string name="block_message">Block Message?</string>
    <string name="start_chat">Start Chat</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="block_user">Block User</string>
    <string name="un_block_user">Un Block User</string>
    <string name="unblock">UnBlock</string>
    <string name="un_archive">Un Archive</string>
</resources>