<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginHorizontal="@dimen/_23sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.app.fitnessgym.customWidget.CustomTextViewSemiBold
        style="@style/text_20_lite"
        android:id="@+id/tvDialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/archive_message"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_23sdp"
        android:layout_marginHorizontal="@dimen/_9sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@color/titaniumWhite"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.app.fitnessgym.customWidget.CustomTextView
        style="@style/text_14_bold"
        android:id="@+id/tvDialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_are_sure_you_want_to_archive_1_conversation"
        android:layout_marginTop="10dp"
        android:textColor="@color/coldGrey"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_23sdp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_11sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.app.fitnessgym.customWidget.CustomTextViewSemiBold
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:gravity="center"
            android:paddingVertical="@dimen/_11sdp"
            android:layout_margin="@dimen/_11sdp"
            android:backgroundTint="@color/titaniumWhite"
            android:background="@drawable/bg_blue_corner_30px" />

        <com.app.fitnessgym.customWidget.CustomTextViewSemiBold
            style="@style/text_16_lite"
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:text="@string/archive"
            android:textColor="@color/white"
            android:gravity="center"
            android:paddingVertical="@dimen/_11sdp"
            android:layout_margin="@dimen/_11sdp"
            android:background="@drawable/bg_blue_corner_30px" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>