<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chat.view.SearchActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.app.fitnessgym.customWidget.CustomImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginVertical="@dimen/_13sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/viewLineHeader"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.app.fitnessgym.customWidget.CustomTextViewSemiBold
            style="@style/text_16_lite"
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/search_conversation"
            android:layout_marginHorizontal="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivBack"
            app:layout_constraintStart_toEndOf="@+id/ivBack"
            app:layout_constraintBottom_toBottomOf="@+id/ivBack"/>

        <View
            android:id="@+id/viewLineHeader"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Antarctica"
            app:layout_constraintTop_toBottomOf="@+id/ivBack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_13sdp"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:background="@drawable/bg_search_corner_8dp"
        app:layout_constraintTop_toBottomOf="@+id/clHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.app.fitnessgym.customWidget.CustomImageView
            android:id="@+id/ivSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search"
            android:tint="@color/gray_text"
            android:layout_marginVertical="@dimen/_9sdp"
            android:layout_marginStart="@dimen/_8sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.app.messageapp.customClass.CustomEditText
            android:id="@+id/etSearchBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/type_a_name_or_number"
            android:gravity="center_vertical"
            android:background="@color/superSilver"
            android:textColorHint="@color/gray_text"
            android:textColor="@color/black"
            android:layout_marginHorizontal="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivSearch"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.app.fitnessgym.customWidget.CustomTextViewSemiBold
        style="@style/text_16_lite"
        android:id="@+id/tvPeople"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/people"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginHorizontal="@dimen/_18sdp"
        app:layout_constraintTop_toBottomOf="@+id/clSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvContacts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:clipToPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPeople"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.app.fitnessgym.customWidget.CustomTextViewSemiBold
        style="@style/text_16_lite"
        android:id="@+id/tvNoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data_found"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/_18sdp"
        android:layout_marginHorizontal="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPeople"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>